# HSF

./: .deepsource.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAST_CHANGELOG.md  LICENSE.md  README.rst  devenv.nix  mkdocs.yml  pyproject.toml  readthedocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  data-submission.md
.github/workflows/: draft-pdf.yml  python-app.yml
docs/: contributing.md  getting-started.md  index.md  model-hub.md  requirements.txt  whats-next.md
docs/about/: authorship.md  license.md  release-notes.md
docs/papers/joss/: paper.bib  paper.md
docs/source/: conf.py  usage.rst
docs/stylesheets/: extra.css
docs/user-guide/: configuration.md  finetuning.md  installation.md  roiloc.md  uncertainty.md
hsf/: augmentation.py  engines.py  factory.py  fetch_models.py  mri_getter.py  multispectrality.py  preprocessing.py  roiloc_wrapper.py  segment.py  uncertainty.py  utils.py  welcome.py
hsf/conf/: config.yaml
hsf/conf/augmentation/: default.yaml
hsf/conf/files/: default.yaml
hsf/conf/hardware/: deepsparse.yaml  default.yaml  onnxruntime.yaml
hsf/conf/hydra/help/: hsf.yaml
hsf/conf/multispectrality/: default.yaml
hsf/conf/preprocessing/: default.yaml
hsf/conf/roiloc/: default_corot2.yaml  default_t2iso.yaml  roiloc.yaml
hsf/conf/segmentation/: arunet.yaml  bagging_accurate.yaml  bagging_fast.yaml  bagging_sparse.yaml  bagging_sparseqat.yaml  bagging_sq.prev.yaml  bagging_sq.yaml  single_accurate.yaml  single_fast.prev.yaml  single_fast.yaml  single_sq.yaml  uniform_soup.yaml
hsf/outputs/2021-09-14/13-25-31/.hydra/: config.yaml  hydra.yaml
papers/joss/: paper.md
tests/: test_hsf.py
